# quant-portfolio-orchestrator

./: .gitignore  Makefile  README.md  SES.py  alpaca_adapter.py  helpers.py  log.py  orchestrator.py  pyproject.toml  regime_detector.py
.github/workflows/: build-and-push.yml  ephemeral-daily-run.yml
.github/workfows/: ephemeral-daily-run.yml
backtest/: algo-portfolio-regime-allocation-gridsearch.ipynb  algo-portfolio-regime-allocation.ipynb  algo-regime-tester.ipynb  monte_carlo_portfolio_simulation.ipynb
backtest/analysis/: algo-portfolio-regime-allocation-gridsearch.ipynb  regime-detector-gridsearch.ipynb  regime-detector.ipynb
backtest/equity-curves/: pairs-portfolio-equity_curve.csv  trend-equity-curve.csv  trend-long-short-futures-oil.csv  volatility-triple-harvester.csv
backtest/strategy/: algo-portfolio-regime-allocation.ipynb
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.local.yml
infra/do-functions/: .env.example  project.yml
scheduler/: crontab  run.sh
supervisor/: supervisord.conf
