[tool.poetry]
name = "quant-portfolio-orchestrator"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.2.2"
xtermcolor = "^1.3"
boto3 = "^1.42.68"
alpaca-py = "^0.43.2"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.5.6"
matplotlib = "^3.10.8"
yfinance = "^1.2.0"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
